// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic textarea 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c0 {
  display: inline-block;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    rows="3"
    style="size: default;"
    type="text"
  />
</div>
`;

exports[`renders correctly for a disabled textarea 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c0 {
  display: inline-block;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    disabled=""
    rows="3"
    style="size: default;"
    type="text"
  />
</div>
`;

exports[`renders correctly for a full width textarea 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c0 {
  display: inline-block;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  width: 100%;
}

<div
  class="c0 c1"
  style="width: 100%;"
  width="100%"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    rows="3"
    style="size: default;"
    type="text"
  />
</div>
`;

exports[`renders correctly for a textarea with a placeholder 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c0 {
  display: inline-block;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    placeholder="Awesome placeholder"
    rows="3"
    style="size: default;"
    type="text"
  />
</div>
`;

exports[`renders correctly for an input with a default value 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c0 {
  display: inline-block;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

<div
  class="c0 c1"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    rows="3"
    style="size: default;"
    type="text"
  >
    Awesome value
  </textarea>
</div>
`;

exports[`sizes renders correctly for a textarea with size large 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c0 {
  display: inline-block;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  font-size: 1.5rem;
}

.c2 + .c4 {
  width: 25px;
  height: 25px;
  top: 16px;
  right: 12px;
}

<div
  class="c0 c1"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    rows="3"
    style="size: large;"
    type="text"
  />
</div>
`;

exports[`sizes renders correctly for a textarea with size medium 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c0 {
  display: inline-block;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  font-size: 1.25rem;
}

.c2 + .c4 {
  width: 20px;
  height: 20px;
  top: 15px;
  right: 10px;
}

<div
  class="c0 c1"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    rows="3"
    style="size: medium;"
    type="text"
  />
</div>
`;

exports[`sizes renders correctly for a textarea with size small 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c0 {
  display: inline-block;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  font-size: 0.8rem;
}

.c2 + .c4 {
  width: 10px;
  height: 10px;
  top: 10px;
}

<div
  class="c0 c1"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    rows="3"
    style="size: small;"
    type="text"
  />
</div>
`;

exports[`states renders correctly for a textarea with state danger 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c0 {
  display: inline-block;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #e24c67;
  box-shadow: #e24c67 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <textarea
    aria-invalid="true"
    aria-required="false"
    class="c2 c3"
    rows="3"
    style="size: default;"
    type="text"
  />
</div>
`;

exports[`states renders correctly for a textarea with state primary 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c0 {
  display: inline-block;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    rows="3"
    style="size: default;"
    type="text"
  />
</div>
`;

exports[`states renders correctly for a textarea with state success 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c0 {
  display: inline-block;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #4ca26c;
  box-shadow: #4ca26c 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    rows="3"
    style="size: default;"
    type="text"
  />
</div>
`;

exports[`states renders correctly for a textarea with state warning 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1.c1.c1 {
  position: relative;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c0 {
  display: inline-block;
}

.c2 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  width: 100%;
  padding: 0.4em 0.6em;
}

.c2[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  color: #8d8d8d;
}

.c2:focus {
  outline: unset;
  z-index: 2;
  border-color: #7467c0;
  box-shadow: #7467c0 0px 0px 0px 1px !important;
}

.c2::-webkit-input-placeholder {
  opacity: 0.6;
}

.c2::-moz-placeholder {
  opacity: 0.6;
}

.c2:-ms-input-placeholder {
  opacity: 0.6;
}

.c2::placeholder {
  opacity: 0.6;
}

.c2 {
  border-color: #ffc94c;
  box-shadow: #ffc94c 0px 0px 0px 1px !important;
}

<div
  class="c0 c1"
>
  <textarea
    aria-invalid="false"
    aria-required="false"
    class="c2 c3"
    rows="3"
    style="size: default;"
    type="text"
  />
</div>
`;
